[fix] formatting for backend