@@ -1,4 +1,5 @@
 package com.github.holly.accountability.validation;
+
 import org.springframework.validation.BindingResult;
 
 import java.util.Arrays;
@@ -6,15 +7,15 @@ import java.util.List;
 
 
 public class BindingResultWrapper {
-    private List<BindingResultError> violations;
+    private final List<BindingResultError> violations;
 
     public BindingResultWrapper(BindingResult bindingResult) {
-       this.violations = bindingResult.getFieldErrors().stream().map( res -> {
-           if(res.getCodes() == null){
-             return new BindingResultError(res.getField(), List.of());
-           }
-           return new BindingResultError(res.getField(), Arrays.asList(res.getCodes()));
-       }).toList();
+        this.violations = bindingResult.getFieldErrors().stream().map(res -> {
+            if (res.getCodes() == null) {
+                return new BindingResultError(res.getField(), List.of());
+            }
+            return new BindingResultError(res.getField(), Arrays.asList(res.getCodes()));
+        }).toList();
     }
 
     public List<BindingResultError> getViolations() {
